<resources>
    <string name="app_name">Commute</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="plan_your_journey">Plan Your Journey</string>
    <string name="commute">Commute</string>
    <string name="timetables">Timetables</string>
    <string name="saved_routes">Saved Routes</string>
    <string name="alerts">Alerts</string>
    <string name="settings">Settings</string>
    <string name="application_icon">Application Icon</string>
    <string name="by_creator">by Vadims Brodskis</string>
    <string name="about">About</string>
    <string name="options">Options</string>
    <string name="journey_options">Journey Options</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="from">From:</string>
    <string name="to">To:</string>
    <string name="choose_starting_point">Choose starting point…</string>
    <string name="choose_destination">Choose destination…</string>
    <string name="leave_now">Leave Now</string>
    <string name="opal_card">Opal Card</string>
    <string name="quick_search">Quick Search</string>
    <string name="transport">Transport</string>
    <string name="speed">Speed</string>
    <string name="swap_button">Swap Button</string>
    <string name="title_activity_journey_options">JourneyOptionsActivity</string>
    <string name="title_activity_journey_routes_list">JourneyRoutesListActivity</string>
    <string name="transport_mode_image">Transport Mode Image</string>
    <string name="to_station_arrow">To Station Arrow</string>
    <string name="welcome_to_commute">Welcome To Commute</string>
    <string name="getting_started">Now, to get started, add your Home and Work/School locations.</string>
    <string name="adding_to_db">First let us set up the transport data, this will only take a few seconds.</string>
    <string name="set_up_commute">Set up commute</string>
    <string name="next_service_arrow">Next Service Arrow</string>
    <string name="previous_service_button">Previous Service Button</string>
    <string name="search_hint">Search stops…</string>
    <string name="visit_website">Visit website</string>
    <string name="website_url">http://vadimsbrodskis.com</string>
    <string name="title_activity_settings">Settings</string>

    <string name="opal_card_type">Opal Card Type</string>
    <string name="other_settings">Other Settings</string>
    <string name="commute_settings">Commute Settings</string>
    <string name="home_preference">Home Stop/Station</string>
    <string name="work_preference">Work or School Stop/Station</string>
    <string name="home_preference_summary">Select the stop that you will be traveling from daily</string>
    <string name="work_preference_summary">Select the stop that you will be traveling to daily</string>
    <string name="opal_preference_summary">Select the type of Opal Card you would like to see prices for</string>
    <string name="transfer_preference">Transfer Stop/Station</string>
    <string name="transfer_preference_summary">Select the station which you need to transfer at (optional)</string>
    <string name="launch_screen_preference_title">Preferred Launch Screen</string>
    <string name="launch_screen_preference_summary">Select which screen you would like to see on launch</string>

    <string name="key_launch_screen_preference">launch_screen_pref</string>
    <string name="key_journey_option_ferry">journey_option_ferry</string>
    <string name="key_journey_option_light_rail">journey_option_light_rail</string>
    <string name="key_journey_option_bus">journey_option_bus</string>
    <string name="key_journey_option_train">journey_option_train</string>

    <string name="next_service_departing_in">Next Service:</string>
    <string name="service_already_departed">Service has already departed</string>
    <string name="price">Price</string>
    <string name="convenience">Convenience</string>
    <string name="loading_timetable">Loading Timetable</string>

    <string name="arrow_right">→</string>
    <string name="dollar_sign">$</string>
    <string name="loading_routes">Loading Routes…</string>
    <string name="price_$">Price: $</string>
    <string name="transfers">"Transfers: "</string>
    <string name="avoid_peak_hour">Avoid Peak Hour</string>
    <string name="avoid_airport_fee">Avoid Airport Fee</string>
    <string name="default_search_pref">Default Search Filter</string>
    <string name="trains">Trains</string>
    <string name="buses">Buses</string>
    <string name="ferries">Ferries</string>
    <string name="light_rail">Light Rail</string>
    <string name="loading_alerts">Loading Alerts…</string>
    <string name="default_preference_result">non</string>
    <string name="title_activity_journey_route">JourneyRouteActivity</string>
    <string name="share_route">Share Route</string>
    <string name="set_as_commute">Set as Commute</string>
    <string name="add_to_calendar">Add to Calendar</string>
    <string name="save_route">Save Route</string>
    <string name="no_routes_found">No Routes were found, please try a different search.</string>
    <string name="title_activity_journey_time_selection">JourneyTimeSelectionActivity</string>
    <string name="reset_time_button">Reset Time Button</string>
    <string name="depart_at">Depart At</string>
    <string name="arrive_by">Arrive by</string>
    <string name="time_options">Time Options</string>
    <string name="today">Today</string>
    <string name="domestic_airport">Domestic Airport</string>
    <string name="international_airport">International Airport</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="title_activity_stop_map">Map</string>
    <string name="set_commute_success_message">Journey stops have been set as preferred commute</string>
    <string name="enter">\n</string>
    <string name="to_arrow_right">" ⇒ "</string>
    <string name="line">———————————————</string>
    <string name="duration">"Duration: "</string>
    <string name="stop_square">"■  "</string>
    <string name="to_stop_arrow_down">"↓  "</string>
    <string name="tilda">〜</string>
    <string name="calendar_event_success">Calendar event added</string>
    <string name="journey_from">"Journey from "</string>
    <string name="calendar_event">vnd.android.cursor.item/event</string>
    <string name="fast">Fast</string>
    <string name="cheap">Cheap</string>
    <string name="convenient">Convenient</string>
    <string name="to_with_spaces">" to "</string>
    <string name="for_space">"for "</string>
    <string name="could_not_find_journey">Could not find journey</string>
    <string name="dash_route">" - Route "</string>
    <string name="routes_to_space">"Routes to "</string>
    <string name="map_for">"Map for "</string>
    <string name="pm">pm</string>
    <string name="am">am</string>
    <string name="time_colon">:</string>
    <string name="comma_space">", "</string>
    <string name="enter_stops">\nstops</string>
    <string name="expand_image">expand image</string>
    <string name="thank_you">Thank you for using Commute.</string>
    <string name="build_date">Build Date:</string>
    <string name="build_date_text">06th June 2016</string>
    <string name="version">1.0</string>
    <string name="version_label">Version:</string>


</resources>
