<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:key="pref_key_commute_settings"
        android:title="@string/commute_settings">

        <Preference
            android:key="@string/home_preference"
            android:summary="@string/home_preference_summary"
            android:title="@string/home_preference">

        </Preference>

        <Preference
            android:key="@string/transfer_preference"
            android:summary="@string/transfer_preference_summary"
            android:title="@string/transfer_preference">

        </Preference>

        <Preference
            android:key="@string/work_preference"
            android:summary="@string/work_preference_summary"
            android:title="@string/work_preference">

        </Preference>

    </PreferenceCategory>

    <PreferenceCategory
        android:key="pref_key_other_settings"
        android:title="@string/other_settings">
        <ListPreference
            android:defaultValue="1"
            android:entries="@array/opal_card_types_array"
            android:entryValues="@array/opal_card_types_array_values"
            android:key="@string/opal_card_type"
            android:summary="@string/opal_preference_summary"
            android:title="@string/opal_card_type" />
        <ListPreference
            android:defaultValue="0"
            android:entries="@array/launch_screen_preference_array_text"
            android:entryValues="@array/launch_screen_preference_array_values"
            android:key="@string/key_launch_screen_preference"
            android:summary="@string/launch_screen_preference_summary"
            android:title="@string/launch_screen_preference_title" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="pref_key_storage_settings"
        android:title="">

    </PreferenceCategory>

</PreferenceScreen>