<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_journey"
            android:icon="@drawable/ic_search_black_24dp"
            android:title="@string/plan_your_journey" />
        <item
            android:id="@+id/nav_commute"
            android:icon="@drawable/ic_directions_railway_black_24dp"
            android:title="@string/commute" />
        <item
            android:id="@+id/nav_timetable"
            android:icon="@drawable/ic_timetable"
            android:title="@string/timetables" />
        <item
            android:id="@+id/nav_saved"
            android:icon="@drawable/ic_save_black_24dp"
            android:title="@string/saved_routes" />
        <item
            android:id="@+id/nav_alerts"
            android:icon="@drawable/ic_report_black_24dp"
            android:title="@string/alerts" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/settings" />
    </group>

</menu>
