<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_journey_time_selection"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_below="@+id/activity_journey_time_selection_relative_layout"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.id11303765.commute.view.journey.JourneyTimeSelectionActivity"
    tools:showIn="@layout/activity_journey_time_selection">

    <LinearLayout
        android:id="@+id/activity_journey_time_selection_time_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TimePicker
            android:id="@+id/activity_journey_time_selection_time_picker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/activity_journey_time_selection_time_ll"
        android:layout_marginTop="20dp"
        android:gravity="center">

        <Button
            android:id="@+id/activity_journey_time_selection_date_button"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/today"
            android:textColor="@color/primary" />

    </LinearLayout>

    <Button
        android:id="@+id/activity_journey_time_selection_leave_now_button"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="@dimen/fab_margin"
        android:layout_marginStart="@dimen/fab_margin"
        android:paddingEnd="@dimen/fab_margin"
        android:textColor="@color/primary"
        android:paddingStart="@dimen/fab_margin"
        android:text="@string/leave_now" />


    <Button
        android:id="@+id/activity_journey_time_selection_cancel_button"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toStartOf="@+id/activity_journey_time_selection_done_button"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/fab_margin"
        android:layout_marginStart="@dimen/fab_margin"
        android:paddingEnd="@dimen/fab_margin"
        android:textColor="@color/primary_text"
        android:paddingStart="@dimen/fab_margin"
        android:text="@string/cancel" />

    <Button
        android:id="@+id/activity_journey_time_selection_done_button"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="@dimen/fab_margin"
        android:layout_marginEnd="@dimen/fab_margin"
        android:textColor="@color/primary"
        android:text="@string/done" />



</RelativeLayout>
