<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_welcome_constraint_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.WelcomeFragment"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="81dp">

    <TextView
        android:id="@+id/fragment_welcome_welcome_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/welcome_to_commute"
        app:layout_constraintLeft_toLeftOf="@+id/fragment_welcome_constraint_layout"
        app:layout_constraintRight_toRightOf="@+id/fragment_welcome_constraint_layout"
        app:layout_constraintTop_toTopOf="@+id/fragment_welcome_constraint_layout"
        tools:layout_constraintLeft_creator="0"
        tools:layout_constraintRight_creator="0"
        tools:layout_constraintTop_creator="0"
        android:textSize="20sp"
        android:textColor="@color/primary_text"/>

    <ImageView
        android:id="@+id/fragment_welcome_image_view"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/logo"
        app:layout_constraintLeft_toLeftOf="@+id/fragment_welcome_constraint_layout"
        app:layout_constraintRight_toRightOf="@+id/fragment_welcome_constraint_layout"
        app:layout_constraintTop_toBottomOf="@+id/fragment_welcome_welcome_text_view"
        tools:layout_constraintLeft_creator="0"
        tools:layout_constraintRight_creator="0"
        tools:layout_constraintTop_creator="0"
        tools:layout_editor_absoluteX="78dp"
        tools:layout_editor_absoluteY="160dp"
        android:contentDescription="@string/application_icon" />

    <TextView
        android:id="@+id/fragment_welcome_start_text_view"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:text="@string/adding_to_db"
        app:layout_constraintLeft_toLeftOf="@+id/fragment_welcome_constraint_layout"
        app:layout_constraintRight_toRightOf="@+id/fragment_welcome_constraint_layout"
        app:layout_constraintBottom_toTopOf="@+id/fragment_welcome_progress_bar"
        tools:layout_constraintLeft_creator="0"
        tools:layout_constraintRight_creator="0"
        tools:layout_constraintTop_creator="0"
        android:textSize="18sp"
        android:textAlignment="center"
        android:textColor="@color/primary_text"/>

    <ProgressBar
        android:id="@+id/fragment_welcome_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        app:layout_constraintLeft_toLeftOf="@+id/fragment_welcome_constraint_layout"
        app:layout_constraintRight_toRightOf="@+id/fragment_welcome_constraint_layout"
        app:layout_constraintBottom_toTopOf="@+id/fragment_welcome_setup_button"
        android:visibility="gone"/>

    <Button
        android:id="@+id/fragment_welcome_setup_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Base.Widget.AppCompat.Button.Colored"
        android:layout_marginBottom="50dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:text="@string/set_up_commute"
        app:layout_constraintLeft_toLeftOf="@+id/fragment_welcome_constraint_layout"
        app:layout_constraintRight_toRightOf="@+id/fragment_welcome_constraint_layout"
        app:layout_constraintBottom_toBottomOf="@+id/fragment_welcome_constraint_layout"/>

</android.support.constraint.ConstraintLayout>