<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_journey_route"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.id11303765.commute.view.journey.JourneyRouteActivity"
    tools:showIn="@layout/activity_journey_route"
    android:layout_below="@+id/activity_journey_route_app_bar">

    <LinearLayout
        android:id="@+id/activity_journey_route_top_info_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:orientation="vertical">
        <LinearLayout
            android:id="@+id/activity_journey_route_time_header_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/adapter_item_journey_route_from_time_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/journey_text"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/activity_journey_route_to_station_arrow_image"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:layout_marginEnd="2dp"
                android:layout_marginStart="2dp"
                android:contentDescription="@string/to_station_arrow"
                android:src="@drawable/ic_towards_black_24dp"
                android:tint="@color/primary_text" />

            <TextView
                android:id="@+id/adapter_item_journey_route_row_to_time_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/journey_text"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/adapter_item_journey_route_row_duration_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:gravity="center"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/journey_text"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/adapter_item_journey_route_row_transport_mode_train_image"
                android:layout_width="@dimen/transport_mode_icon_width_small"
                android:layout_height="@dimen/transport_mode_icon_width_small"
                android:layout_marginEnd="2dp"
                android:background="@xml/rounded_image_border"
                android:contentDescription="@string/transport_mode_image"
                android:src="@drawable/tnsw_icon_train"
                android:visibility="gone" />

            <ImageView
                android:id="@+id/adapter_item_journey_route_row_transport_mode_ferry_image"
                android:layout_width="@dimen/transport_mode_icon_width_small"
                android:layout_height="@dimen/transport_mode_icon_width_small"
                android:layout_marginEnd="2dp"
                android:background="@xml/rounded_image_border"
                android:contentDescription="@string/transport_mode_image"
                android:src="@drawable/tnsw_icon_ferry"
                android:visibility="gone" />

            <ImageView
                android:id="@+id/adapter_item_journey_route_row_transport_mode_light_rail_image"
                android:layout_width="@dimen/transport_mode_icon_width_small"
                android:layout_height="@dimen/transport_mode_icon_width_small"
                android:background="@xml/rounded_image_border"
                android:contentDescription="@string/transport_mode_image"
                android:src="@drawable/tnsw_icon_light_rail"
                android:visibility="gone" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/adapter_item_journey_route_row_price_mid_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/adapter_item_journey_route_row_price_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/price_$"
                android:textColor="@color/secondary_text"
                android:textSize="@dimen/journey_text" />

            <TextView
                android:id="@+id/adapter_item_journey_route_row_price_amount_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:gravity="center"
                android:textColor="@color/secondary_text"
                android:textSize="@dimen/journey_text" />


            <TextView
                android:id="@+id/adapter_item_journey_route_row_transfers_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:gravity="center"
                android:text="@string/transfers"
                android:textColor="@color/secondary_text"
                android:textSize="@dimen/journey_text" />

            <TextView
                android:id="@+id/adapter_item_journey_route_row_transfers_number_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="17dp"
                android:gravity="center"
                android:textColor="@color/secondary_text"
                android:textSize="@dimen/journey_text" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/adapter_item_journey_route_row_speed_circle"
                android:layout_width="@dimen/type_circle_size"
                android:layout_height="18dp"
                android:layout_gravity="center"
                android:contentDescription="@string/speed"
                android:src="@drawable/ic_directions_run_black_24dp"
                android:tint="@color/secondary_text" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:text="Speed"/>

            <ImageView
                android:id="@+id/adapter_item_journey_route_row_price_circle"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_gravity="center"
                android:contentDescription="@string/price"
                android:src="@drawable/ic_attach_money_black_24dp"
                android:tint="@color/secondary_text" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:text="Price"/>

            <ImageView
                android:id="@+id/adapter_item_journey_route_row_convenience_circle"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_gravity="center"
                android:layout_marginEnd="2dp"
                android:contentDescription="@string/convenience"
                android:src="@drawable/ic_event_seat_black_24dp"
                android:tint="@color/secondary_text" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="Convenience"/>

        </LinearLayout>
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/activity_journey_routes_list_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/activity_journey_route_top_info_ll">

    </android.support.v7.widget.RecyclerView>


</RelativeLayout>
